Fix PODCAT-327 and PODCAT-370 issue: reduce spacing and adjust footer

--- a/src/pages/searchCatalogPage/searchCatalogPage.css
+++ b/src/pages/searchCatalogPage/searchCatalogPage.css
@@ -14,7 +14,7 @@
   padding: 20px 0 10px 0;
   color: #07368b;
   font-size: 42px;
-  line-height: 42px;
+  line-height: 34px;
   font-weight: bold;
   font-family: Inter;
   width: 100%;
@@ -23,7 +23,7 @@
 
 .searchTooltip {
   margin-left: 15px;
-  line-height: 32px;
+  line-height: 24px;
 }
 
 .searchTooltipButton {
